# bookkeeping-cpprest-client

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  jiskefet-api-cpp-example  openapi-source.yaml
documentation/html/: BookkeepingInterface_8h_source.html  classbookkeeping_1_1BookkeepingInterface.html
src/: BookkeepingApi.cpp  BookkeepingApi.h  BookkeepingInterface.h  CreateLogParameters.h  CreateRunParameters.h  Example.cpp  GetLogsParameters.h  GetRunsParameters.h  JiskefetApi.cpp  JiskefetApi.h  JiskefetFactory.cpp  JiskefetFactory.h  JiskefetInterface.h  Log.h  LogOrigin.h  LogSubtype.h  OrderDirection.h  Run.h
src/cpprest-client/api/: FlpApi.cpp  FlpApi.h  LogApi.cpp  LogApi.h  RunApi.cpp  RunApi.h  SubsystemApi.cpp  SubsystemApi.h  TagApi.cpp  TagApi.h
src/cpprest-client/model/: Attachment.cpp  Attachment.h  CreateLog.cpp  CreateLog.h  DeployInformation.cpp  DeployInformation.h  Flp.cpp  Flp.h  Run.cpp  Run.h  UpdateFlp.cpp  UpdateFlp.h
